sketch/k8s/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: mrbochanov/app
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8000
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 5  
          resources:
            requests:
              cpu: 100m
              memory: 100Mi   

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
